# mcp-service

./: .gitignore  Cargo.toml  LICENSE
src/: error.rs  main.rs
src/handlers/: sse.rs
src/models/: mod.rs
src/routes/: mod.rs
